# memento

./: .gitignore  Justfile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6e7c9e3b9d44_create_memento_tables.py
memento/: __init__.py  alembic.ini  cli.py  crud.py  models.py  recorder.py
memento/migrations/: downgrade.sql  env.py  upgrade.sql
memento/migrations/versions/: 0f36f68ad565_create_assistants_table.py  21f989b77c7c_.py  2a21579ece89_set_defaults.py  8fbedb0152e5_create_conversations_table.py  b2cc607acc45_create_user_table.py  c757923af25e_create_messages_table.py
memento/nosql/: __init__.py
memento/nosql/asynchronous/: __init__.py
memento/nosql/asynchronous/schemas/: models.py
memento/nosql/asynchronous/src/: __init__.py  basememory.py  manager.py  migrator.py  repository.py
memento/nosql/schemas/: models.py  settings.py
memento/nosql/src/: __init__.py  basememory.py  manager.py  migrator.py  repository.py
memento/nosql/synchronous/: __init__.py
memento/nosql/synchronous/schemas/: models.py
memento/nosql/synchronous/src/: __init__.py  basememory.py  manager.py  migrator.py  repository.py
memento/schemas/: migration.py  models.py
memento/sql/: __init__.py
memento/sql/asynchronous/: __init__.py  alembic.ini
memento/sql/asynchronous/schemas/: models.py
memento/sql/asynchronous/src/: __init__.py  basememory.py  manager.py  migrator.py  repository.py
memento/sql/migrations/versions/: 8fbedb0152e5_create_conversations_table.py
memento/sql/orm/sync/: basememory.py  manager.py  migrator.py  repository.py
memento/sql/schemas/: migration.py
memento/sql/src/: __init__.py
memento/sql/src/asynchronous/: __init__.py  basememory.py  manager.py  migrator.py  repository.py
memento/sql/src/sync/: __init__.py  manager.py  (+3 more)
memento/sql/synchronous/: __init__.py
memento/src/: __init__.py  basememory.py  manager.py  migrator.py  repository.py
tests/: test_async_crud.py  test_async_models.py  test_async_recorder.py  test_crud.py  test_models.py  test_recorder.py
tests/nosql/: test_async_nosqlmemory.py  test_sync_nosqlmemory.py
tests/nosql/src/: test_basememory.py  test_manager.py  test_repository.py
tests/postgresql/: test_crud.py
tests/sql/: test_async_sqlmemory.py  test_sync_sqlmemory.py
tests/sql/sync/: test_repository.py
(+14 files in other folders)
