[tool.poetry]
name = "memento-llm"
version = "0.1.8.3"
description = "Simple LLM Memory"
authors = ["Anibal Angulo <ajcardoza2000@gmail.com>"]
packages = [{ include = "memento" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
makefun = "^1.15.2"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = { version = "^2.9.9", optional = true }
mysql-connector-python = { version = "^8.3.0", optional = true }
beanie = { version = "^1.25.0", optional = true }

[tool.poetry.extras]
mysql = ["mysql-connector-python"]
pgsql = ["psycopg2-binary"]
nosql = ["beanie"]
all = ["mysql-connector-python", "psycopg2-binary", "beanie"]


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.5.post1"
openai = "^1.13.3"
litellm = "^1.30.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
